이전 커밋 누락 파일

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko-KO">
 
 <head>
     <meta charset="UTF-8">
@@ -32,7 +32,14 @@
                     </ul>
                 </details>
             </li>
-            <li><a href="index.html">test2</a></li>
+            <li>
+                <details open>
+                    <summary>자습</summary>
+                    <ul>                      
+                        <li><a href="posts/markingpaper.html">정처기 cbt</a></li>
+                    </ul>
+                </details>
+            </li>
         </ul>
     </nav>
 
